--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,18 @@
  
     font-family: 'Times New Roman', Times, serif;
     font-size: large;
-    color: rgb(8, 1, 1);
+    color: white;
 }
 body {
     font-family: Arial, sans-serif;
+  
     margin: 20px;
     background-color: #f9f9f9;
+ background-image: url("istockphoto-825087094-612x612.jpg");
+ background-repeat: no-repeat;
+ background-attachment: fixed;  
+  background-size: cover;
+  
 }
 
 .container {
