change header color

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,7 @@
  
     font-family: 'Times New Roman', Times, serif;
     font-size: large;
-    color: white;
-}
+    color: green;}
 body {
     font-family: Arial, sans-serif;
   
